--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack -w",
-    "build-release": "webpack --config webpack.config.production.js"
+    "build-release": "webpack --config webpack.config.production.js && cp ./manifest.json ./build/manifest.json"
   },
   "author": "Wouter Spaak <w.spaak@gmail.com>",
   "license": "MIT",
